@@ -38,10 +38,10 @@ import android.test.AndroidTestCase;
 public class ParserTestFunctions extends AndroidTestCase {
 
 	private static final double DELTA = 0.01;
-	private static final float LOOK_ALPHA = 0.5f;
+	private static final float LOOK_ALPHA = 50f;
 	private static final float LOOK_Y_POSITION = 23.4f;
 	private static final float LOOK_X_POSITION = 5.6f;
-	private static final float LOOK_BRIGHTNESS = 0.7f;
+	private static final float LOOK_BRIGHTNESS = 70f;
 	private static final float LOOK_SCALE = 90.3f;
 	private static final float LOOK_ROTATION = 30.7f;
 	private static final int LOOK_ZPOSITION = 3;
@@ -52,10 +52,9 @@ public class ParserTestFunctions extends AndroidTestCase {
 		testSprite = new Sprite("sprite");
 		testSprite.look.setXInUserInterfaceDimensionUnit(LOOK_X_POSITION);
 		testSprite.look.setYInUserInterfaceDimensionUnit(LOOK_Y_POSITION);
-		testSprite.look.setAlphaValue(LOOK_ALPHA);
-		testSprite.look.setBrightness(LOOK_BRIGHTNESS);
-		testSprite.look.setScaleX(LOOK_SCALE);
-		testSprite.look.setScaleY(LOOK_SCALE);
+		testSprite.look.setTransparencyInUserInterfaceDimensionUnit(LOOK_ALPHA);
+		testSprite.look.setBrightnessInUserInterfaceDimensionUnit(LOOK_BRIGHTNESS);
+		testSprite.look.setSizeInUserInterfaceDimensionUnit(LOOK_SCALE);
 		testSprite.look.setRotation(LOOK_ROTATION);
 		testSprite.look.setZIndex(LOOK_ZPOSITION);
 	}
@@ -199,8 +198,8 @@ public class ParserTestFunctions extends AndroidTestCase {
 	public void testMod() {
 
 		for (int offset = 0; offset < 10; offset += 1) {
-			Integer dividend = new Integer(1 + offset);
-			Integer divisor = new Integer(1 + offset);
+			Integer dividend = Integer.valueOf(1 + offset);
+			Integer divisor = Integer.valueOf(1 + offset);
 
 			List<InternToken> internTokenList = new LinkedList<InternToken>();
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_NAME, Functions.MOD.name()));
@@ -220,8 +219,8 @@ public class ParserTestFunctions extends AndroidTestCase {
 		}
 
 		for (int offset = 0; offset < 100; offset += 2) {
-			Integer dividend = new Integer(3 + offset);
-			Integer divisor = new Integer(2 + offset);
+			Integer dividend = Integer.valueOf(3 + offset);
+			Integer divisor = Integer.valueOf(2 + offset);
 
 			List<InternToken> internTokenList = new LinkedList<InternToken>();
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_NAME, Functions.MOD.name()));
@@ -241,8 +240,8 @@ public class ParserTestFunctions extends AndroidTestCase {
 		}
 
 		for (int offset = 0; offset < 10; offset += 1) {
-			Integer dividend = new Integer(3 + offset);
-			Integer divisor = new Integer(5 + offset);
+			Integer dividend = Integer.valueOf(3 + offset);
+			Integer divisor = Integer.valueOf(5 + offset);
 
 			List<InternToken> internTokenList = new LinkedList<InternToken>();
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_NAME, Functions.MOD.name()));
@@ -262,16 +261,14 @@ public class ParserTestFunctions extends AndroidTestCase {
 		}
 
 		for (int offset = 0; offset < 10; offset += 1) {
-
-			Integer dividend = new Integer(-3 - offset);
-			Integer divisor = new Integer(2 + offset);
+			Integer dividend = Integer.valueOf(-3 - offset);
+			Integer divisor = Integer.valueOf(2 + offset);
 
 			List<InternToken> internTokenList = new LinkedList<InternToken>();
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_NAME, Functions.MOD.name()));
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_PARAMETERS_BRACKET_OPEN));
 			internTokenList.add(new InternToken(InternTokenType.OPERATOR, Operators.MINUS.toString()));
-			internTokenList.add(new InternToken(InternTokenType.NUMBER, new Integer(java.lang.Math.abs(dividend
-					.intValue())).toString()));
+			internTokenList.add(new InternToken(InternTokenType.NUMBER, String.valueOf(Math.abs(dividend.intValue()))));
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_PARAMETER_DELIMITER));
 			internTokenList.add(new InternToken(InternTokenType.NUMBER, divisor.toString()));
 			internTokenList.add(new InternToken(InternTokenType.FUNCTION_PARAMETERS_BRACKET_CLOSE));
